--- a/dockerMysql/Dockerfile
+++ b/dockerMysql/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql
 WORKDIR /workspace/mysql
 EXPOSE 3306
-ENV MYSQL_ROOT_PASSWORD rootENV MYSQL_ROOT_PASSWORD root
+ENV MYSQL_ROOT_PASSWORD root
