--- a/dockerApplication/Dockerfile
+++ b/dockerApplication/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /workspace/app
 COPY src src
 COPY pom.xml .
 COPY ./dockerApplication/Dockerfile .
-RUN mvn package -DskipTests
+RUN mvn -B clean package -DskipTests
 ENTRYPOINT ["java","-cp","/workspace/app/target/*","Application"]
 
 #FROM openjdk:11-jdk
